--- a/src/app/evaluation-result/evaluation-result.component.css
+++ b/src/app/evaluation-result/evaluation-result.component.css
@@ -182,3 +182,11 @@ h3 {
         height: 100;
     }
 }
+
+
+/* desenha retangulo para assinatura do profissional */
+#rectangle {
+    width: 300px;
+    margin: 0 auto;
+    border: 2px solid black;
+  }
